# aarya

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-publish.yml
src/aarya/: cli.py  useragents.json
src/aarya/modules/funding/: buymeacoffee.py
src/aarya/modules/learning/: duolingo.py
src/aarya/modules/mail/: proton.py
src/aarya/modules/music/: spotify.py
src/aarya/modules/shopping/: amazon.py  flipkart.py
src/aarya/modules/social/: aboutme.py  instagram.py  wattpad.py
src/aarya/shared/: utils.py
tests/: test_cli.py
