[metadata]
name = aarya
version = 0.1.0
description = OSINT Email Scanner
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/aarya
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    httpx

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov